--- a/Backoffice/Pages/BitGo.razor
+++ b/Backoffice/Pages/BitGo.razor
@@ -1,4 +1,6 @@
-﻿@page "/BitGo"
+﻿@using Backoffice.Components.BitGo.Balances
+
+@page "/BitGo"
 
 <ul class="nav nav-tabs nav-pills">
     <li class="nav-item" style="margin: 10px">
@@ -6,6 +8,9 @@
     </li>
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.Assets)" aria-current="page" @onclick="SetAssets">Assets</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.Balances)" aria-current="page" @onclick="SetBalances">Balances</button>
     </li>
 </ul>
 
@@ -18,6 +23,11 @@
     @if (ActivePage == Menus.Assets)
     {
         <BitGoAssetListComponent/>
+    }
+
+    @if (ActivePage == Menus.Balances)
+    {
+        <BitGoWalletBalanceListComponent/>
     }
 </div>
 
@@ -42,20 +52,23 @@
     {
         None,
         Coins,
-        Assets
+        Assets,
+        Balances
     }
 
 
     private void SetCoins()
     {
-        ActivePage = Menus.Coins;
-        StateHasChanged();
+        SetActive(Menus.Coins);
     }
 
     private void SetAssets()
     {
         SetActive(Menus.Assets);
-        StateHasChanged();
     }
 
+    private void SetBalances()
+    {
+        SetActive(Menus.Balances);
+    }
 }
