--- a/Backoffice/Pages/LiquidityEngine.razor
+++ b/Backoffice/Pages/LiquidityEngine.razor
@@ -61,11 +61,9 @@
 
 </div>
 
-
-
 @code {
 
-    private Menus ActivePage { get; set; } = Menus.MarketMaker;
+    private Menus ActivePage { get; set; } = Menus.AssetPortfolio;
 
     private string CheckActive(Menus target)
     {
