refactoring asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -138,6 +138,13 @@
                     <span>Open Price Avg: @Math.Round(netBalanceByAsset.OpenPriceAvg, 2)</span>
                     <br>
                     <span>Unreleased Pnl: @Math.Round(netBalanceByAsset.UnrealisedPnl, 2)</span>
+                    <br>
+                    <span>Koef: @Math.Round(netBalanceByAsset.WalletBalances
+                                    .Where(e => !e.IsInternal)
+                                    .Sum(e => e.NetVolume) 
+                                  / netBalanceByAsset.WalletBalances
+                                      .Where(e => e.IsInternal)
+                                      .Sum(e => e.NetVolume), 2)</span>
                 </td>
                 <td style="background: @GetAssetBackgroundStyle(status)">
                     @if (status?.UplStrike != 0) 
