--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
@@ -55,7 +55,9 @@
         <th>Source</th>
         <th>Comment</th>
         <th>User</th>
-        <th>TotalReleasePnl</th>
+        <th>Total Release Pnl</th>
+        <th>Fee Asset</th>
+        <th>Fee Volume</th>
     </tr>
     </thead>
     <tbody>
@@ -81,6 +83,8 @@
             <td>@trade.Comment</td>
             <td>@trade.User</td>
             <td>@trade.TotalReleasePnl</td>
+            <td>@trade.FeeAsset</td>
+            <td>@trade.FeeVolume</td>
         </tr>
     }
     </tbody>
