add current prices

--- a/Backoffice/Components/SpotInstruments/SpotInstrumentComponent.razor
+++ b/Backoffice/Components/SpotInstruments/SpotInstrumentComponent.razor
@@ -27,6 +27,7 @@
             
         <th>Flags</th>
         <th>Icon</th>
+        <th>Convert market</th>
         <th>Brands</th>
         <th></th>
     </tr>
