--- a/Backoffice/Components/SpotInstruments/SpotInstrumentDetailsDialog.razor
+++ b/Backoffice/Components/SpotInstruments/SpotInstrumentDetailsDialog.razor
@@ -30,6 +30,9 @@
                             <img src="@Item.Instrument.IconUrl" width="100px">
                         }
                     </td></tr>
+                    <tr></tr>
+                    <tr><td>Convert Exchange</td><td class="float-left">@Item.Instrument.ConvertSourceExchange</td></tr>
+                    <tr><td>Convert Market</td><td class="float-left">@Item.Instrument.ConvertSourceMarket</td></tr>
                 </table>
 
             </td>
