--- a/Backoffice/Pages/Prices.razor
+++ b/Backoffice/Pages/Prices.razor
@@ -15,6 +15,9 @@
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.ConversionPrices)" @onclick="SetConversionPrices" >ConversionPrices</button>
     </li>
+    <li class="nav-item" style="margin: 10px">
+            <button class="nav-link @CheckActive(Menus.CurrentPrice)" @onclick="SetCurrentPrices" >Current Prices</button>
+    </li>
 </ul>
 
 <div style="margin: 10px">
@@ -35,6 +38,10 @@
     @if (ActivePage == Menus.ConversionPrices)
     {
         <ConversionIndexPricesComponent />
+    }
+    @if (ActivePage == Menus.CurrentPrice)
+    {
+        <CurrentPricesComponent />
     }
 </div>
 
@@ -81,7 +88,13 @@
         Prices,
         BasePrices,
         IndexPrices,
-        ConversionPrices
+        ConversionPrices,
+        CurrentPrice
     }
- 
+
+    private void SetCurrentPrices()
+    {
+        SetActive(Menus.CurrentPrice);
+    }
+
 }
