--- a/Backoffice/Pages/Prices.razor
+++ b/Backoffice/Pages/Prices.razor
@@ -4,7 +4,7 @@
 
 <ul class="nav nav-tabs nav-pills">
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Prices)" aria-current="page" @onclick="SetPrices" >Prices</button>
+        <button class="nav-link @CheckActive(Menus.CurrentPrice)" @onclick="SetCurrentPrices" >Current Prices</button>
     </li>
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.BasePrices)" @onclick="SetBasePrices" >BasePrices</button>
@@ -16,7 +16,7 @@
         <button class="nav-link @CheckActive(Menus.ConversionPrices)" @onclick="SetConversionPrices" >ConversionPrices</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-            <button class="nav-link @CheckActive(Menus.CurrentPrice)" @onclick="SetCurrentPrices" >Current Prices</button>
+        <button class="nav-link @CheckActive(Menus.Prices)" aria-current="page" @onclick="SetPrices" >Prices</button>
     </li>
 </ul>
 
@@ -47,7 +47,7 @@
 
 @code {
 
-    private Menus ActivePage { get; set; } = Menus.Prices;
+    private Menus ActivePage { get; set; } = Menus.CurrentPrice;
 
     private string CheckActive(Menus target)
     {
