remove me price source

--- a/Backoffice/Components/Liquidity/ExternalMarkets/ExternalMarketOrderBookComponent.razor
+++ b/Backoffice/Components/Liquidity/ExternalMarkets/ExternalMarketOrderBookComponent.razor
@@ -1,5 +1,4 @@
-﻿@using Service.MatchingEngine.PriceSource.Client
-@using Service.Liquidity.Engine.Grpc
+﻿@using Service.Liquidity.Engine.Grpc
 @using Service.Liquidity.Engine.Grpc.Models
 
 @inject IOrderBookManagerGrpc OrderBookManagerGrpc
