--- a/Backoffice/Components/Liquidity/Market2/ShowPriceComponent.razor
+++ b/Backoffice/Components/Liquidity/Market2/ShowPriceComponent.razor
@@ -1,23 +1,20 @@
-﻿@inject ICurrentPricesCache PriceService
+﻿@inject ICurrentPricesClient CurrentPricesClient
 
-@using Service.MatchingEngine.PriceSource.Client
 @using MyJetWallet.Domain.Prices
+@using Service.IndexPrices.Client
+@using Service.IndexPrices.Domain.Models
 @implements IDisposable
 
 @if (_price != null)
 {
     <div style="font-size: 10px; background: @((DateTime.UtcNow - _price.DateTime).TotalSeconds > 5 ? "lightpink" : "white")">
         <div class="row">
-            <div class="col-md-1">ask:</div>
-            <div class="col-md-1">@_price.Ask</div>
+            <div class="col-md-1">price:</div>
+            <div class="col-md-1">@_price.Price</div>
         </div>
         <div class="row">
-            <div class="col-md-1">bid:</div>
-            <div class="col-md-1">@_price.Bid</div>
-        </div>
-        <div class="row">
-            <div class="col-md-1">spred:</div>
-            <div class="col-md-1">@(Math.Round((_price.Ask - _price.Bid) / ((_price.Ask + _price.Bid) / 2) * 100, 3))%</div>
+            <div class="col-md-1">source:</div>
+            <div class="col-md-1">@_price.Source</div>
         </div>
     </div>
 }
@@ -30,7 +27,7 @@
     public string Symbol { get; set; }
     
     private bool _isDispose = false;
-    private BidAsk _price;
+    private CurrentPrice _price;
     
     private async Task RefreshPrice()
     {
@@ -38,7 +35,7 @@
         
         if (BrokerId != null && Symbol != null)
         {
-            _price = PriceService.GetPrice(BrokerId, Symbol);
+            _price = CurrentPricesClient.GetPriceByInstrument(BrokerId, Symbol);
         }
         else
         {
