change report trade dto

--- a/Backoffice/Components/Converter/Settings/ConverterSettingsComponent.razor
+++ b/Backoffice/Components/Converter/Settings/ConverterSettingsComponent.razor
@@ -123,7 +123,7 @@
     {
         try
         {
-            var response = await SettingsManager
+            var response = SettingsManager
                 .GetLiquidityConverterSettingsAsync();
             if (!response.Success)
             {
